--- a/praktikum-3/tugas-rumah/tugas_background.html
+++ b/praktikum-3/tugas-rumah/tugas_background.html
@@ -35,7 +35,10 @@
     }
 
     .background-campuran{
+      width: 100%;
+      height: 500px;
       background: url('../assets/strawberries.jpg') bottom right / 700px 400px no-repeat scroll padding-box content-box red;
+      box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
     }
     
 
