fix sembarang wes

--- a/praktikum-4/index.html
+++ b/praktikum-4/index.html
@@ -42,7 +42,7 @@
 	</div>
 	<!-- End Hero -->
 
-	!<!-- Showcase -->
+	<!-- Showcase -->
 	<div class="showcase-container">
 		<section class="showcase">
 			<div class="showcase-image">
