feat: re folder assets

--- a/praktikum-5/external_defer.html
+++ b/praktikum-5/external_defer.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Belajar JavaScript: External Defer</title>
-    <script src="assets/script-defer-1.js" defer></script>
-    <script src="assets/script-defer-2.js" defer></script>
+    <script src="assets/js/script-defer-1.js" defer></script>
+    <script src="assets/js/script-defer-2.js" defer></script>
   </head>
   <body>
     <h1 id="myH1-defer">Hello World</h1>
