--- a/praktikum-5/soal.html
+++ b/praktikum-5/soal.html
@@ -8,6 +8,6 @@
   <body>
     <p id="myText">Yeayy</p>
     <button onclick="changeText()">Klik untuk mengubah teks</button>
-    <script src="assets/soal.js"></script>
+    <script src="assets/js/soal.js"></script>
   </body>
 </html>
