--- a/praktikum-5/external_js.html
+++ b/praktikum-5/external_js.html
@@ -8,7 +8,7 @@
   <body>
     <button id="myButton">Click me!</button>
     <h1 id="myH1"></h1>
-    <script src="assets/script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
 
